--- a/edge-centerseekbar/src/main/res/values/attrs.xml
+++ b/edge-centerseekbar/src/main/res/values/attrs.xml
@@ -3,6 +3,8 @@
     <declare-styleable name="CenterSeekBar">
         <attr name="seekbar_backgroundtint" format="color"/>
         <attr name="seekbar_progresstint" format="color"/>
+        <attr name="seekbar_thumbtint" format="color"/>
+        <attr name="seekbar_height" format="dimension"/>
     </declare-styleable>
 
 </resources>
